fix: prevent horizontal overflow by hiding overflow on html and adjust footer styles

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -22,6 +22,7 @@
     padding-block: 6rem;
     position: relative;
     z-index: 100;
+    overflow: hidden;
     & .line {
       position: absolute;
       top: 0;
