--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   width: 100%;
   height: 100vh;
